--- a/dmitri_manajev.tex
+++ b/dmitri_manajev.tex
@@ -202,6 +202,7 @@ spanning \textit{autonomous agents, planning/control, sim-to-real, and experimen
 
     % Swissmeda — Role 2 (separate entry)
     % Some parsers have problem parsing 2 job roles for same company
+    \begin{samepage}
     \resumeSubheading
       {Swissmeda AG}{Zurich, CH}
       {Senior iOS Engineer}{2014 -- 2015}
@@ -209,6 +210,7 @@ spanning \textit{autonomous agents, planning/control, sim-to-real, and experimen
         \resumeItem
          {Architected the multi-brand \href{https://apps.apple.com/us/app/smop/id971741467}{\textbf{smop}} iOS client; automated staging/deploy (Fastlane/CocoaPods); collaborated with surgical planning team.}
       \resumeItemListEnd
+    \end{samepage}
     
     \resumeSubheading
         {SpotMe (Shockfish SA)}{Lausanne, CH}
